# Passive-Aggressive-Reply-as-a-Service

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
passive_agressive_reply_as_a_service/: __init__.py  dataset.py  features.py  plots.py
passive_agressive_reply_as_a_service/modeling/: predict.py  train.py
src/pa_reply/api/: main.py  routes.py  schemas.py
src/pa_reply/core/: generator.py  postprocess.py  prompts.py  safety.py
src/pa_reply/model/: hf_textgen.py  settings.py
