[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "passive_agressive_reply_as_a_service"
version = "0.0.1"
description = "Passive-Aggressive-Reply-as-a-Service is a simples API that returns a random passive aggressive reply. Use it when you want to reply to that annoying coworker or friend in style."
authors = [
  { name = "Diogo Ferreira" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "==3.11.3"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["passive_agressive_reply_as_a_service"]
force_sort_within_sections = true


